tests/snapshots/run_wpt_conformance__coreml_per-tensor_dequantizeLinear_for_int4_4D_tensor_with_float16_4D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js per-tensor dequantizeLinear for int4 4D tensor with float16 4D scale, coreml
 Failed to build graph: graph conversion failed for coreml: int4/uint4 tensors are not supported in CoreML conversion yet

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1, 1, 2, 2] @bytes([123, 60, 158, 68, 62, 70, 175, 67]);
    operand_2: i4[1, 1, 2, 2] @bytes([45, 180]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
