tests/snapshots/run_wpt_conformance__coreml_pow_float16_3D_base_tensor_and_3D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float16 3D base tensor and 3D integer exponent tensor",
    "coreml",
    "PASS",
)
