tests/snapshots/run_wpt_conformance__coreml_pow_float16_5D_base_tensor_and_5D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float16 5D base tensor and 5D integer exponent tensor",
    "coreml",
    "PASS",
)
